--- a/index.html
+++ b/index.html
@@ -5,13 +5,31 @@
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
+	<div class="main-container">
+		<div class="login-container">
+			<h2>Login</h2>
+			<div>
+				<label>Username: </label>
+				<input name="username">
+			</div>
+			<div>
+				<label>Password: </label>
+				<input name="password">
+			</div>
+			<div class="button-container">
+				<button data-bind="click: login" class="button-standard">OK</button>
+				<a href="#">Forgot Password</a>
+			</div>
+		</div>
+	</div>
 
-
-<script type="text/javascript" src="lib/jquery-3.1.1.js"></script>
-<script type="text/javascript" src="lib/jquery-ui.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
-
+	<script
+  src="https://code.jquery.com/jquery-2.2.4.js"
+  integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
+  crossorigin="anonymous"></script>
+	<script type="text/javascript" src="lib/jquery-ui.js"></script>
+	<script src="https://ajax.aspnetcdn.com/ajax/knockout/knockout-3.1.0.js" type="text/javascript"></script>
+	<script type="text/javascript" src="js/index.js"></script>
 
 </body>
 </html>
