--- a/product.html
+++ b/product.html
@@ -5,12 +5,47 @@
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
+	<div class="main-container">
+
+		<div class="table-container">
+			<table>
+				<thead>
+					<tr>
+						<th>ID</th><th>Product Name</th><th>Description</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>
+							<span data-bind="text: prodId"></span>
+						</td>
+						<td>
+							<span data-bind="text: prodName"></span>
+						</td>
+						<td>
+							<span data-bind="text: prodDesc"></span>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		<div>
+	<div>
 
 
-<script type="text/javascript" src="lib/jquery-3.1.1.js"></script>
+<script
+  src="https://code.jquery.com/jquery-2.2.4.js"
+  integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
+  crossorigin="anonymous"></script>
+	<script type="text/javascript" src="lib/jquery-ui.js"></script>
+	<script src="https://ajax.aspnetcdn.com/ajax/knockout/knockout-3.1.0.js" type="text/javascript"></script>
+	<script type="text/javascript" src="js/index.js"></script>
+
+
+
+<!-- <script type="text/javascript" src="lib/jquery-3.1.1.js"></script>
 <script type="text/javascript" src="lib/jquery-ui.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script> -->
+<script type="text/javascript" src="js/product.js"></script>
 
 
 </body>
