--- a/index.html
+++ b/index.html
@@ -10,23 +10,20 @@
 			<h2>Login</h2>
 			<div>
 				<label>Username: </label>
-				<input name="username">
+				<input data-bind="value: username">
 			</div>
 			<div>
 				<label>Password: </label>
-				<input name="password">
+				<input data-bind="value: password">
 			</div>
 			<div class="button-container">
 				<button data-bind="click: login" class="button-standard">OK</button>
-				<a href="#">Forgot Password</a>
+				<a href="#">Forgot&nbsp;Password</a>
 			</div>
 		</div>
 	</div>
 
-	<script
-  src="https://code.jquery.com/jquery-2.2.4.js"
-  integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
-  crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="lib/jquery-ui.js"></script>
 	<script src="https://ajax.aspnetcdn.com/ajax/knockout/knockout-3.1.0.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/index.js"></script>
