--- a/product.html
+++ b/product.html
@@ -3,18 +3,30 @@
 <head>
 	<title>Products</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" type="text/css" href="css/product.css">
 </head>
 <body>
 	<div class="main-container">
 
-		<div class="table-container">
+		<h3>Products Inventory</h3>
+
+		<hr>
+
+		<div class="button-container">
+			<button data-bind="click: saveChange, visible: isEdited" class="button-common">Save</button>
+			<button data-bind="click: cancelChange, visible: isEdited" class="button-common">Cancel</button>
+			<button href="#" data-bind="click: addProduct, visible: isEdited() == false" 
+			class="button-common">Add</button>
+		</div>
+
+		<div class="table-container elem-shadow clear-fix">
 			<table>
 				<thead>
 					<tr>
-						<th>ID</th><th>Product Name</th><th>Description</th>
+						<th>ID</th><th>Product Name</th><th>Description</th><th></th>
 					</tr>
 				</thead>
-				<tbody>
+				<tbody data-bind="foreach: prodList">
 					<tr>
 						<td>
 							<span data-bind="text: prodId"></span>
@@ -25,6 +37,9 @@
 						<td>
 							<span data-bind="text: prodDesc"></span>
 						</td>
+						<td>
+							<a href="#" data-bind="click" class="small-font">Remove</a>
+						</td>
 					</tr>
 				</tbody>
 			</table>
@@ -32,20 +47,10 @@
 	<div>
 
 
-<script
-  src="https://code.jquery.com/jquery-2.2.4.js"
-  integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
-  crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="lib/jquery-ui.js"></script>
-	<script src="https://ajax.aspnetcdn.com/ajax/knockout/knockout-3.1.0.js" type="text/javascript"></script>
-	<script type="text/javascript" src="js/index.js"></script>
-
-
-
-<!-- <script type="text/javascript" src="lib/jquery-3.1.1.js"></script>
-<script type="text/javascript" src="lib/jquery-ui.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script> -->
-<script type="text/javascript" src="js/product.js"></script>
+	<script type="text/javascript" src="lib/knockout-3.4.1.js" ></script>
+	<script type="text/javascript" src="js/product.js"></script>
 
 
 </body>
