--- a/product.html
+++ b/product.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="main-container">
 
-		<h3>Products Inventory</h3>
+		<h1>Products Inventory</h1>
 
 		<hr>
 
@@ -28,17 +28,19 @@
 				</thead>
 				<tbody data-bind="foreach: prodList">
 					<tr>
-						<td>
+						<td data-bind="click: $root.editProduct">
 							<span data-bind="text: prodId"></span>
 						</td>
-						<td>
-							<span data-bind="text: prodName"></span>
+						<td data-bind="click: $root.editProduct">
+							<span data-bind="text: prodName, visible: isEditable() == false"></span>
+							<input data-bind="value: prodName, visible: isEditable">
 						</td>
-						<td>
-							<span data-bind="text: prodDesc"></span>
+						<td data-bind="click: $root.editProduct">
+							<span data-bind="text: prodDesc, visible: isEditable() == false""></span>
+							<input data-bind="value: prodDesc, visible: isEditable">
 						</td>
-						<td>
-							<a href="#" data-bind="click" class="small-font">Remove</a>
+						<td >
+							<a href="#" data-bind="click: $root.deleteProduct" class="small-font">Remove</a>
 						</td>
 					</tr>
 				</tbody>
