--- a/product.html
+++ b/product.html
@@ -17,19 +17,19 @@
 				<button data-bind="click: saveChange" class="button-common">Save</button>
 				<button data-bind="click: cancelChange" class="button-common">Cancel</button>
 			</div>
-			<div data-bind="visible: isEdited() == false">
-				<label>Category: </label><select data-bind="options: categoryList" style="height:30px;padding:5px"></select>
+			<div data-bind="visible: isEdited() == false" class="add-prod-container">
+				<label>Category: </label><select data-bind="options: categoryList, optionsText: 'category', value: selectedCategory" class="select-category"></select>
 				<label>Name: </label>
-					<input type="text" name="productName" id="productName" class="input-tall" style="width:19%">
-				<label>Description: </label>&nbsp;
-					<input type="text" name="productDescription" id="productDesc" class="input-tall" style="width:33%">
+					<input type="text" name="productName" id="productName" class="input-tall add-prod-name">
+				<label>Description: </label>
+					<input type="text" name="productDescription" id="productDesc" class="input-tall add-prod-desc">
 				<button href="#" data-bind="click: addProduct" class="button-common">Add</button>
 			</div>
 
 		</div>
 
 		<div class="table-container elem-shadow clear-fix">
-			<table>
+			<table data-bind="with: selectedCategory">
 				<thead>
 					<tr>
 						<th>ID</th><th>Product Name</th><th>Description</th><th></th>
